<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Select Room Type"/>

    <!--Room Radio Group -->
    <RadioGroup
        android:id="@+id/room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/room1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/apartment" />

        <RadioButton
            android:id="@+id/room2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/standardACRooms" />

        <RadioButton
            android:id="@+id/room3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/standardNonACRooms" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/roomFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="start"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="Meal Options"/>

    <!--Meal Radio Group -->
    <RadioGroup
        android:id="@+id/meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/meal1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/alacarte" />

        <RadioButton
            android:id="@+id/meal2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/standardMessFourMeals" />

        <RadioButton
            android:id="@+id/meal3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="6dp"
            android:paddingVertical="4dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"
            android:text="@string/standardMessTwoMeals" />
    </RadioGroup>
    <FrameLayout
        android:id="@+id/mealFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>