<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".RoomReservation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Select Room Type"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Room Radio Group -->
        <RadioGroup
            android:id="@+id/roomType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/roomType1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/apartment"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/roomType2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/standardACRooms"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/roomType3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/standardNonACRooms"
                android:textColor="@color/radio_flat_text_selector" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/roomTypeFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Meal Options"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <!--Meal Radio Group -->
        <RadioGroup
            android:id="@+id/mealType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/mealType1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/alacarte"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/mealType2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/standardMessFourMeals"
                android:textColor="@color/radio_flat_text_selector" />

            <RadioButton
                android:id="@+id/mealType3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="9"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/standardMessTwoMeals"
                android:textColor="@color/radio_flat_text_selector" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/mealTypeFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Other Facilities"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/laundry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/laundry"
                android:textColor="@color/radio_flat_text_selector" />

            <CheckBox
                android:id="@+id/gym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/gym"
                android:textColor="@color/radio_flat_text_selector" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/custom_button"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/bookNow"
            android:textColor="@color/orange" />

    </LinearLayout>

</ScrollView>